styles/directory.scss
/* 
 * DIRECTORY RESULTS 
 */

 .DIRECTORY-RESULTS------------------------ { color: inherit;}

/* Flex grid item */
.member-listing>.vc_row>.col {
  row-gap: 2rem;
}

.member-card>.vc_column-inner,
.member-card>.vc_column-inner>.wpb_wrapper {
  height: 100%; /* Make cards same height */
}

.member-card>.vc_column-inner>.wpb_wrapper {
  background-color: var(--color-bg-light-default);
  color: var(--color-text-dark-on-light-default);
  border-radius: var(--border-radius-extra-large);
  overflow: hidden;
    
  /* Make cards same height */
  display: flex;
  flex-direction: column;
}

/* Featured Image */

.member-card .directory-result-element-featured-image a {
  line-height: 0; /* To miminize bottom spacing */
  display: block; /* To make image fill height */
  aspect-ratio: 1;  /* To make image fill height */
}

.member-card .directory-result-element-featured-image img {
  margin-bottom: 0;
  height: 100%;  /* To make image fill height */
  object-fit: cover; /* To make image fill height */
  min-width: 100%; /* To make image fill width */
  aspect-ratio: 1;
}

/* Content */
:root {
  --padding-horizontal-member-card-content: 2rem;
}

@media screen and (max-width: 480px) {
  :root {
    --padding-horizontal-member-card-content: 5%;
  } 
}

.member-card .directory-result-element-member-name, 
.member-card .wpb_content_element:not(.directory-result-element-featured-image), 
.member-card .inner-row-directory-result-member-socials {
  padding: 0 var(--padding-horizontal-member-card-content);
}

body .member-card h4,  /* Salient override */
.member-card .directory-result-element-member-name {
  color: var(--color-text-dark-on-light-default);
  margin-top: 2rem;
}

.member-card .wpb_text_column.wpb_content_element:not(.directory-result-member-bio) {
  margin-bottom: 0;
}

body .member-card .wpb_text_column.wpb_content_element:not(.directory-result-member-bio) p { /* Override */
  font-family: var(--font-family-display);
}

body .member-card .directory-result-member-bio {
  margin-top: 1em;
  flex-grow: 100; /* Expand to make content below it align to bottom */
}

/* Bio "Read More" interaction */
.directory-result-member-bio input.toggleMemberBio {
  opacity: 0;
  position: absolute;
  pointer-events: none;
}

.directory-result-member-bio span {
  -webkit-line-clamp: 6;
  display: -webkit-box;
  overflow: hidden;
  -webkit-box-orient: vertical;
}

.directory-result-member-bio input.toggleMemberBio:focus ~ label {
  outline: -webkit-focus-ring-color auto 1rem;
}

.directory-result-member-bio input.toggleMemberBio:checked + span {
  -webkit-line-clamp: unset;
}

label.labelToggleMemberBio {
  display: none;
  padding: 0.125em 0.5em;
  background-color: var(--color-bg-neutral-subtle-semitransparent);
  border-radius: var(--border-radius-medium);
    margin-top: 0.5em;
  font-size: var(--font-size-sub-paragraph);
  cursor: pointer;
}

label.labelToggleMemberBio::after {
  content: " Less";
}

.directory-result-member-bio span.truncated label.labelToggleMemberBio::after {
  content: " More";
}

label.labelToggleMemberBio:hover {
  background-color: var(--color-bg-neutral-dark-strong-semitransparent);
  color: var(--color-text-light-on-dark-default);
}

.directory-result-member-bio span.truncated ~ label.labelToggleMemberBio {
  display: inline-block;
}


/* Button */
.member-card .nectar-button{
  margin: 0 var(--padding-horizontal-member-card-content);
  display: block;
  text-align: center;
}

body.material .member-card .nectar-button.accent-color { /* override */
  --color-button-assigned: var(--color-member-highlight);
}

.member-card .nectar-button[data-color-override="false"].regular-button { /* Salient override */
  background-color: var(--color-button-assigned) !important;
}

body.material .member-card .nectar-button.large:hover,  /* override github css */
.member-card .nectar-button[data-color-override="false"].regular-button.large:hover,  /* override github css */
body .member-card .nectar-button[data-color-override="false"].see-through.large:hover { /* override github css */
  --color-button-assigned-shadow: var(--color-member-highlight-shade);
}

/* Socials */
@media (min-width: 690px) {
  .inner-row-directory-result-member-socials .vc_col-sm-4 { /* Salient override */
      width: 100%;
  }
}

.inner-row-directory-result-member-socials .nectar_icon i {
  width: 0px !important; /* make no-link icons have no width */
  overflow: hidden; /* Hide no-link icons */
}

.inner-row-directory-result-member-socials .nectar_icon a+i {
  margin-right: 1rem;
  width: auto !important; /* offset 0px for no-link icons */
}

.inner-row-directory-result-member-socials a:hover+i {
  color: var(--color-member-highlight) !important;
}




/* 
 * DIRECTORY FILTERS
 */


.DIRECTORY-FILTERS------------------------ { color: inherit;}
 /* WPBPB Row for Directory Filters */
 #directoryFilterModuleRow {
  --directoryFiltersBottomMargin: 5rem;    
}

.sf-directory-filters .searchandfilter>ul {
  display: flex;
  margin-left: 0;
  width: 100%;
  flex-wrap: wrap;
  --gap: 2rem;
  gap: var(--gap);
}


/* Filter category container */
.sf-directory-filters .searchandfilter>ul>li {
  --column-width: calc((100% - (3 * var(--gap))) / 4);
  flex: 1 1 var(--column-width);
}

/* Filter category heading */
.sf-directory-filters .searchandfilter>ul li h4 {
  font-size: var(--font-size-paragraph);
  line-height: var(--line-height-paragraph);
}

/* Years of Experience option units */
.sf-directory-filters .searchandfilter>ul li.sf-field-taxonomy-years_of_experience ul li {
  display: inline-block;
  margin-right: 1rem;
  white-space: nowrap;
}

/* Reset button */
.sf-directory-filters .searchandfilter>ul li.sf-field-reset a{
  /* Align button with other input options */
  --sf-h4-vert-padding: calc(5px + 10px);
  --sf-h4-height: calc(var(--font-size-paragraph) * var(--line-height-paragraph));
  --sf-h4-vert-margin: 12px; /* manual */
  margin-top: calc(var(--sf-h4-vert-padding) + var(--sf-h4-height) + var(--sf-h4-vert-margin));
  display: block; /* to make margin-top take effect */
}


/* Direcotry Combo box layout */
.sf-directory-filters .chosen-container.chosen-container-multi {
  width: 100% !important;
}


@media screen and (max-width:999px) {
  /* Filter categories */
  .sf-directory-filters .searchandfilter>ul {
    display: block;
  }

  /* Reset button */
  .sf-directory-filters .searchandfilter>ul li.sf-field-reset a {
    display: inline;
  }
}




/* 
 * DIRECTORY FORM
 */

.DIRECTORY-FORM------------------------ { color: inherit;}

/* Field Row */
body #directory-form-form .gform_wrapper ul li.gfield, 
#directory-form-form .gform_wrapper .gfield_html.gfield_no_follows_desc {
  margin-top: 2.5em;
}

/* Section headings */
.gform_wrapper li.gfield.field_description_below+li.gsection {
  margin-top: 6em !important;
}

#directory-form-form .gform_legacy_markup_wrapper .gsection .gfield_label, 
#directory-form-form .gform_legacy_markup_wrapper h2.gsection_title, 
#directory-form-form .gform_legacy_markup_wrapper h3.gform_title {
  font-size: var(--font-size-h4);
  line-height: var(--line-height-h4);
}

/* Color selection */
/* Color options Group */
#directory-form-form #field_3_68 .gfield_radio {
  display: flex;
  flex-wrap: wrap;
  background-color: var(--color-bg-light-default);
  padding: var(--spacing-large);
  border-radius: var(--border-radius-container-default);
  width: 100%; /* override */
}

/* Individual color option - group */
#directory-form-form #field_3_68 .gfield_radio .gchoice {
  margin-bottom: 0;
}

/* Individual color option - radio button */
#directory-form-form #field_3_68 .gchoice input[type=radio] {
  display: none;
}

/* Individual color option - label/faux-button */
#directory-form-form #field_3_68 .gchoice label {
  background-color: var(--color-option);
  border-radius: var(--border-radius-button-default);
  padding: 0.75rem 2.5rem;
  text-transform: uppercase;
  position: relative;
  white-space: nowrap;
  max-width: none;
  margin: 0.5rem;
  transition-duration: 0.1s;
  outline-offset: 0px;
  font-weight: var(--font-weight-bold) !important; /* override */
}



#directory-form-form #field_3_68 .gchoice input[type=radio]:checked+label {
  outline: 2px solid var(--color-option);
  outline-offset: 2px;
}

/* Individual color option - label check mark */
#directory-form-form #field_3_68 .gchoice input[type=radio]+label::before {
  content: "\2713";
  position: absolute;
  transform: none;
  width: 1em;
  height: 1em;
  text-align: center;
  line-height: 1em;
  display: block;
  font-size: var(--font-size-super-paragraph);
  opacity: 0;
  transition-duration: 0.3s;
}

@media screen and (max-width:480px) {

  /* color option container */
  #directory-form-form #field_3_68 .gfield_radio {
    padding: var(--spacing-medium);
  }

  /* color options */
  #directory-form-form #field_3_68 .gchoice label {
    --padding-local: 1.5rem;
    padding-left: var(--padding-local);
    padding-right: var(--padding-local);
  }

  /* color option icon */
  #directory-form-form #field_3_68 .gchoice input[type=radio]+label::before {
    content: unset;
  }
  
}


#directory-form-form #field_3_68 .gchoice input[type=radio]:checked+label::before {
  transform: translate(-1.75rem, 0rem);
  opacity: 1;
}

#directory-form-form #field_3_68 .gchoice [value="Dark Gray"]+label {
  --color-option: var(--color-brand-gray-darkest);
}


#directory-form-form #field_3_68 .gchoice [value="Brown"]+label {
  --color-option: var(--color-brand-brown);
}

#directory-form-form #field_3_68 .gchoice [value="Pink"]+label {
  --color-option: var(--color-brand-pink);
}

#directory-form-form #field_3_68 .gchoice [value="Red"]+label {
  --color-option: var(--color-brand-red);
}

#directory-form-form #field_3_68 .gchoice [value="Orange"]+label {
  --color-option: var(--color-brand-orange);
}

#directory-form-form #field_3_68 .gchoice [value="Yellow"]+label {
 --color-option: var(--color-brand-yellow);
}

#directory-form-form #field_3_68 .gchoice [value="Green"]+label {
 --color-option: var(--color-brand-green);
}

#directory-form-form #field_3_68 .gchoice [value="Blue"]+label {
  --color-option: var(--color-brand-blue);
}

#directory-form-form #field_3_68 .gchoice [value="Purple"]+label {
  --color-option: var(--color-brand-purple);
}

/* Member Photo preview */
.directory-form-photo-preview .member-photo {
  display: none; /* Hide by default; JS will set to show when an image is added */
  aspect-ratio: 1;
  overflow: hidden;
  width: 25rem;
  max-height: 25rem;
  max-width: 100%; /* for mobile */
}

.directory-form-photo-preview .member-photo img {
  object-fit: cover;
  min-width: 100%;
  min-height: 100%;
  border-radius: var(--border-radius-extra-large);
}

#directory-form-form .gform_fileupload_rules {
  display: block;
}

/* Shield icon */
.gform_wrapper li.gf-form-section-directory-verification h2::before {
  content: "\f132";
  font-family: FontAwesome;
  margin-right: 0.5em;
  vertical-align: text-top;
  font-size: var(--font-size-h3);
  line-height: 1;
  font-weight: normal;
}

